Refactored and modularized doomsday engine

--- a/doomsday_client_nb.ipynb
+++ b/doomsday_client_nb.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6f245885-725b-4a00-83bb-d6b9f9fd9a18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from doomsday_engine import parse_decklist, suggest_viable_piles\n",
+    "from doomsday_engine import load_deck_from_text, suggest_viable_piles\n",
     "\n",
     "# 1) Paste in (or load) your raw decklist text\n",
     "\n",
